--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,20 @@
 {
   "manifest_version": 2,
-  "name": "Pretendy Jobs Blocker",
-  "version": "0.1",
+  "name": "Reed.co.uk Training Course Blocker",
+  "version": "1.0",
+   "permissions": [
+          "storage"
+        ],
   "content_scripts": [
     {
       "matches": [
         "https://www.reed.co.uk/*"
       ],
-		"js": ["jquery-2.1.3.min.js", "content.js"]
+		"js": ["content.js"]
     }
-  ]
+  ],
+    "browser_action": {
+          "default_icon": "icon32.png"
+        }
+		
 }
